[gd_scene load_steps=8 format=3 uid="uid://cdmudjfylw6pk"]

[ext_resource type="Script" path="res://mainMenu.gd" id="1_ihftg"]
[ext_resource type="Texture2D" uid="uid://brm6rdhh88vao" path="res://resources/sprites/MainPage.png" id="2_t14gr"]
[ext_resource type="FontFile" uid="uid://b8k5brwvy6lk3" path="res://resources/Menu/Pattaya-Regular.ttf" id="3_2tgq7"]

[sub_resource type="Theme" id="Theme_o088p"]
default_font = ExtResource("3_2tgq7")

[sub_resource type="Theme" id="Theme_qo43w"]
default_font = ExtResource("3_2tgq7")

[sub_resource type="LabelSettings" id="LabelSettings_v1wem"]
font_size = 50

[sub_resource type="Theme" id="Theme_fbwdf"]
default_font = ExtResource("3_2tgq7")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ihftg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1084.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="logo" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 280.0
offset_right = 1649.0
offset_bottom = 1082.0
texture = ExtResource("2_t14gr")
stretch_mode = 4

[node name="MenuButton" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 629.0
offset_top = 524.0
offset_right = 1213.0
offset_bottom = 972.0
theme = SubResource("Theme_o088p")
theme_override_constants/separation = 25
metadata/_edit_group_ = true

[node name="start" type="Button" parent="Control/MenuButton"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control/MenuButton/start"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Label" type="Label" parent="Control/MenuButton/start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qo43w")
text = "START"
label_settings = SubResource("LabelSettings_v1wem")
horizontal_alignment = 1
vertical_alignment = 1

[node name="How To Play" type="Button" parent="Control/MenuButton"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control/MenuButton/How To Play"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/MenuButton/How To Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fbwdf")
text = "How To Play"
label_settings = SubResource("LabelSettings_v1wem")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credit" type="Button" parent="Control/MenuButton"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control/MenuButton/Credit"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/MenuButton/Credit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Credit"
label_settings = SubResource("LabelSettings_v1wem")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/MenuButton/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/MenuButton/How To Play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Control/MenuButton/Credit" to="." method="_on_credit_pressed"]
